@@ -11,41 +11,23 @@ import java.util.stream.Collectors;
 
 import static com.abdala.demo.user.Permission.*;
 
-
 @RequiredArgsConstructor
 public enum Role {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE
+    USER(Collections.emptySet()), ADMIN(Set.of(ADMIN_READ, ADMIN_UPDATE, ADMIN_DELETE, ADMIN_CREATE
 
-          )
+    )
 
-  )
-,NORMALUSER(
-          Set.of(
-                  NORMALUSER_READ,
-                  NORMALUSER_UPDATE,
-                  NORMALUSER_DELETE,
-                  NORMALUSER_CREATE
-          )
-  ),
-   ROLE_USER(Collections.emptySet())
-  ;
+    ), NORMALUSER(Set.of(NORMALUSER_READ, NORMALUSER_UPDATE, NORMALUSER_DELETE, NORMALUSER_CREATE)),
+    ROLE_USER(Collections.emptySet());
 
-  @Getter
-  private final Set<Permission> permissions;
+    @Getter
+    private final Set<Permission> permissions;
 
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    var authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = getPermissions().stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission())).collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }
 }
